// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rules > color/grouped-page: fires, then holds back 1`] = `
{
  "color": {
    "background": {
      "dark": 2,
      "light": 96,
    },
    "primary": "accent",
    "seeds": {
      "accent": "#0070f1",
    },
    "v": 2,
  },
  "icons": undefined,
  "params": {},
  "tokens": {
    "--card-border": "transparent",
    "--color-card": "light-dark(oklch(1 0 0), color-mix(in oklab, var(--neutral-50) 75%, var(--neutral-100)))",
    "--color-popover": "light-dark(oklch(1 0 0), color-mix(in oklab, var(--neutral-50) 50%, var(--neutral-100)))",
    "--overlay-border": "light-dark(transparent, var(--color-border))",
    "--shadow-modal": "0 0 2px 0 light-dark(rgb(0 0 0 / 0.12), rgb(0 0 0 / 0.24)), 0 10px 15px -3px light-dark(rgb(0 0 0 / 0.1), rgb(0 0 0 / 0.2)), 0 4px 6px -4px light-dark(rgb(0 0 0 / 0.1), rgb(0 0 0 / 0.2))",
    "--shadow-popover": "0 0 2px 0 light-dark(rgb(0 0 0 / 0.12), rgb(0 0 0 / 0.24)), 0 4px 6px -1px light-dark(rgb(0 0 0 / 0.1), rgb(0 0 0 / 0.2)), 0 2px 4px -2px light-dark(rgb(0 0 0 / 0.1), rgb(0 0 0 / 0.2))",
  },
}
`;

exports[`rules > focus/focusGap-inert: fires, then holds back 1`] = `
{
  "color": undefined,
  "icons": undefined,
  "params": {},
  "tokens": {
    "--focus-ring-offset": "0px",
  },
}
`;

exports[`rules > focus/focusHaloStrength-inert: fires, then holds back 1`] = `
{
  "color": undefined,
  "icons": undefined,
  "params": {},
  "tokens": {},
}
`;

exports[`rules > focus/focusInputBorderWidth-inert: fires, then holds back 1`] = `
{
  "color": undefined,
  "icons": undefined,
  "params": {},
  "tokens": {},
}
`;

exports[`rules > focus/focusInputStrength-inert: fires, then holds back 1`] = `
{
  "color": undefined,
  "icons": undefined,
  "params": {},
  "tokens": {
    "--focus-input-color": "var(--color-border-focus)",
    "--focus-input-inset": "inset",
    "--focus-input-offset": "0px",
    "--focus-input-width": "0px",
  },
}
`;

exports[`rules > focus/focusInputWidth-inert: fires, then holds back 1`] = `
{
  "color": undefined,
  "icons": undefined,
  "params": {},
  "tokens": {
    "--focus-input-color": "var(--focus-ring-color)",
    "--focus-input-inner": "var(--focus-ring-inner)",
    "--focus-input-offset": "var(--focus-ring-offset)",
    "--focus-input-width": "var(--focus-ring-width)",
  },
}
`;

exports[`rules > focus/focusOffset-inert: fires, then holds back 1`] = `
{
  "color": undefined,
  "icons": undefined,
  "params": {},
  "tokens": {
    "--focus-ring-inner": "1px",
    "--focus-ring-offset": "0px",
  },
}
`;

exports[`rules > icons/stroke-only-line-sets: fires, then holds back 1`] = `
{
  "color": undefined,
  "icons": "phosphor",
  "params": {},
  "tokens": {},
}
`;

exports[`rules > icons/weight-only-phosphor: fires, then holds back 1`] = `
{
  "color": undefined,
  "icons": undefined,
  "params": {},
  "tokens": {},
}
`;

exports[`rules > input-groups/divider-only-boxed: fires, then holds back 1`] = `
{
  "color": undefined,
  "icons": undefined,
  "params": {},
  "tokens": {},
}
`;

exports[`rules > spinner/curve-only-ring: fires, then holds back 1`] = `
{
  "color": undefined,
  "icons": undefined,
  "params": {
    "loader": {
      "style": "dots",
    },
  },
  "tokens": {},
}
`;

exports[`rules > surfaces/flat-needs-separation: fires, then holds back 1`] = `
{
  "color": undefined,
  "icons": undefined,
  "params": {},
  "tokens": {
    "--card-border": "transparent",
    "--color-card": "light-dark(var(--neutral-25), color-mix(in oklab, var(--neutral-50) 75%, var(--neutral-100)))",
    "--overlay-border": "light-dark(transparent, var(--color-border))",
    "--shadow-card": "0 0 2px 0 light-dark(rgb(0 0 0 / 0.12), rgb(0 0 0 / 0.24)), 0 1px 3px 0 light-dark(rgb(0 0 0 / 0.1), rgb(0 0 0 / 0.2)), 0 1px 2px -1px light-dark(rgb(0 0 0 / 0.1), rgb(0 0 0 / 0.2))",
    "--shadow-modal": "0 0 2px 0 light-dark(rgb(0 0 0 / 0.12), rgb(0 0 0 / 0.24)), 0 10px 15px -3px light-dark(rgb(0 0 0 / 0.1), rgb(0 0 0 / 0.2)), 0 4px 6px -4px light-dark(rgb(0 0 0 / 0.1), rgb(0 0 0 / 0.2))",
    "--shadow-popover": "0 0 2px 0 light-dark(rgb(0 0 0 / 0.12), rgb(0 0 0 / 0.24)), 0 4px 6px -1px light-dark(rgb(0 0 0 / 0.1), rgb(0 0 0 / 0.2)), 0 2px 4px -2px light-dark(rgb(0 0 0 / 0.1), rgb(0 0 0 / 0.2))",
  },
}
`;
